--- a/com.outlook@styner07.cs.control/com.outlook@styner07.cs.control.csproj
+++ b/com.outlook@styner07.cs.control/com.outlook@styner07.cs.control.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <UseWindowsForms>true</UseWindowsForms>
+	  <Platforms>AnyCPU;x64</Platforms>
+	  <Version>23.8.6.0</Version>
+	  <Company>daejinsama</Company>
+	  <Authors>daejinsama</Authors>
   </PropertyGroup>
 
   <ItemGroup>
